l10:lij new translation part16

--- a/lij/browser/chrome/browser/devtools/app-manager.properties
+++ b/lij/browser/chrome/browser/devtools/app-manager.properties
@@ -15,8 +15,8 @@ validator.invalidManifestJSON = O manifesto da webapp (%1$S) o no l'é 'n file J
 validator.noAccessManifestURL = Inposcibile leze o file do manifesto (%1$S): %2$S
 validator.invalidHostedManifestURL = URL '%1$S' do manifesto hosted no valido: %2$S
 validator.invalidProjectType = Tipo de progetto '%S' sconosciuo
-validator.missNameManifestProperty = Seçion òbligatöia 'name' no prezente into manifesto.
-validator.missIconsManifestProperty = Seçion 'icons' no prezente into manifesto.
+validator.missNameManifestProperty = Sescion òbligatöia 'name' no prezente into manifesto.
+validator.missIconsManifestProperty = Sescion 'icons' no prezente into manifesto.
 validator.missIconMarketplace2 = La proposta de app in sce Marketplace a domanda un'icöna de 128 pixel
 validator.invalidAppType = Tipo de app sconosciuo: '%S'.
 validator.invalidHostedPriviledges = In'app hosted a no peu ese de tipo '%S'.
