--- a/lij/browser/chrome/browser/devtools/markers.properties
+++ b/lij/browser/chrome/browser/devtools/markers.properties
@@ -72,7 +72,7 @@ marker.gcreason.label.SET_DOC_SHELL = Neuvo documento
 marker.gcreason.label.DOM_UTILS = Ciamâ API
 marker.gcreason.label.DOM_IPC = IPC
 marker.gcreason.label.DOM_WORKER = GC periodico worker
-marker.gcreason.label.INTER_SLICE_GC = GC periodico incrementâ de seçion
+marker.gcreason.label.INTER_SLICE_GC = GC periodico incrementâ de sescion
 marker.gcreason.label.FULL_GC_TIMER = GC periodico conpleto
 marker.gcreason.label.SHUTDOWN_CC = Seramento
 marker.gcreason.label.FINISH_LARGE_EVALUATE = Eval de grendi dimenscioin
@@ -107,7 +107,7 @@ marker.gcreason.description.SET_DOC_SHELL = Inta navegaçion da pagina semmo fin
 marker.gcreason.description.DOM_UTILS = Gh'é stæta 'na ciamâ API ch'a l'à forsou o çiclo de coleçion de rumenta.
 marker.gcreason.description.DOM_IPC = L'é stæto riçevuo un mesaggio tra processi ch'o l'à domandou o çiclo de coleçion de rumenta.
 marker.gcreason.description.DOM_WORKER = O worker o l'é stæto inativo pe tròppo tenpo.
-marker.gcreason.description.INTER_SLICE_GC = O l'é pasou 'n tenpo relativamente longo da precedente ezecoçion do çiclo GC incrementâ de seçion (“slice”).
+marker.gcreason.description.INTER_SLICE_GC = O l'é pasou 'n tenpo relativamente longo da precedente ezecoçion do çiclo GC incrementâ de sescion (“slice”).
 marker.gcreason.description.FULL_GC_TIMER = JavaScript o l'é tornou a-o loop eventi e o l'ea za pasou 'n tenpo relativamente longo da precedente esegoçion do çiclo de coleçion de rumenta.
 marker.gcreason.description.SHUTDOWN_CC = Firefox o l'à distruto o contesto ò runtime JavaScript e sto chi o l'ea o çiclo de coleçion de rumenta finale primma do seramento.
 marker.gcreason.description.FINISH_LARGE_EVALUATE = Firefox o l'à finio a valotaçion de 'n script de grendi dimenscioin e o l'à inandiou un çiclo GC perché o script o no saiâ mai ciù ezegoio.
