--- a/lij/browser/chrome/browser/loop/loop.properties
+++ b/lij/browser/chrome/browser/loop/loop.properties
@@ -26,7 +26,7 @@ display_name_guest = Òspite
 display_name_dnd_status = No ronpî
 display_name_available_status = Disponibile
 unable_retrieve_url = No l'é poscibile òtegnî 'n indirisso pe-a ciamâ.
-session_expired_error_description = Seçion scheita. Tutti i URL creæ e condivizi primma no saian ciù boin.
+session_expired_error_description = Sescion scheita. Tutti i URL creæ e condivizi primma no saian ciù boin.
 could_not_authenticate = Inposcibile aotenticase
 password_changed_question = T'æ cangiou a paròlla segreta?
 try_again_later = Preuva torna ciù tardi
@@ -136,7 +136,7 @@ retry_call_button = Preuva torna
 email_link_button = Manda colegamento pe email
 cancel_button = Anulla
 rejoin_button = Parteçipa torna a-a conversaçion
-cannot_start_call_session_not_ready = Inposcibile inandiâ a ciamâ, a seçion a no l'é pronta.
+cannot_start_call_session_not_ready = Inposcibile inandiâ a ciamâ, a sescion a no l'é pronta.
 network_disconnected = A conescion de ræ a s'é interotta sensa motivo.
 connection_error_see_console_notification = Ciamâ no ariescia, consoltâ a console pe atri detalli.
 no_media_failure_message = Nisciunn-a fòtocamera ò micròfono.
