--- a/lij/browser/chrome/browser/places/places.properties
+++ b/lij/browser/chrome/browser/places/places.properties
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-load-js-data-url-error=Pe raxoin de seguessa, javascript ò e url de dæti no peuan ese careghê dò-u barcon da stöia o da bara de scianco.
+load-js-data-url-error=Pe raxoin de seguessa, javascript ò l'url de dæti no peuan ese caregæ dò-u barcon da stöia o da bara de scianco.
 noTitle=(sensa titolo)
 
 bookmarksMenuEmptyFolder=(veuo)
@@ -13,7 +13,6 @@ bookmarksRestoreAlertTitle=Repiggia i segnalibbri
 bookmarksRestoreAlert=Questo rinpiasiâ tutti i segnalibbri co-a còpia de seguessa. T'ê seguo?
 bookmarksRestoreTitle=Seleçionn-a 'na còpia de seguessa di segnalibbri
 bookmarksRestoreFilterName=JSON
-bookmarksRestoreFilterExtension=*.json
 
 bookmarksRestoreFormatError=Tipo de file no soportou.
 bookmarksRestoreParseError=No riescio a procesâ o file da còpia de seguessa.
@@ -35,8 +34,6 @@ view.sortBy.1.date.label = vixita ciù recente
 view.sortBy.1.date.accesskey = r
 view.sortBy.1.visitCount.label = Numero de vixite
 view.sortBy.1.visitCount.accesskey = v
-view.sortBy.1.keyword.label = Paròlla ciava
-view.sortBy.1.keyword.accesskey = c
 view.sortBy.1.description.label = Descriçion
 view.sortBy.1.description.accesskey = D
 view.sortBy.1.dateAdded.label = Dæta de inserimento
@@ -87,9 +84,13 @@ bookmarkResultLabel=Segnalibbro
 
 # LOCALIZATION NOTE (lockPrompt.text)
 # %S will be replaced with the application name.
-lockPrompt.title=Erô a iniçiâ o navegatô
+lockPrompt.title=Erô a inandiâ o navegatô
 lockPrompt.text=I segnalibbri e a stöia a no fonçioniâ perché un file de %S l'é uzou da 'n'atra aplicaçion. Quarche aplicaçion de seguessa peu caozâ sto problema.
 lockPromptInfoButton.label=Pe saveine de ciù
 lockPromptInfoButton.accessKey=P
 
-windows8TouchTitle = Windows 8 Touch
+switchtabResultLabel = Feuggio
+keywordResultLabel = Paròlla chave
+searchengineResultLabel = Riçerca
+
+
