--- a/lij/browser/chrome/browser/preferences/preferences.properties
+++ b/lij/browser/chrome/browser/preferences/preferences.properties
@@ -128,8 +128,20 @@ portableDocumentFormat = PDF (Portable Document Format)
 featureEnableRequiresRestart = Che t'arvi torna o %S pe ativâ sta fonçion.
 featureDisableRequiresRestart = Che t'arvi torna o %S pe dizativâ sta fonçion.
 shouldRestartTitle = Arvi torna o %S
-
 canAccessFirstParty = Consenti solo se generæ dò-u scito
 
-updateAutoDesktop.label = Installa aotomaticamente agiornamenti da verscion desktop de %S
-updateAutoDesktop.accessKey = s
+acceptVeryLargeMinimumFont = Mantegni a dimenscion seleçionâ
+actualDiskCacheSizeCalculated = Calcolo dimenscion cache pe-i contegnui web…
+blocklistChangeRequiresRestart = Ti devi arvî torna %S pe cangiâ l’elenco di elementi blocæ.
+blockliststext = Çerni l’elenco da aduviâ in Firefox pe blocâ i elementi che peuan traciâ a navegaçion.
+blockliststitle = Elenchi pe blòcco elementi che tracian
+e10sFeedbackAfterRestart = Dòppo che t'æ averto torna saiâ averto 'n feuggio co-o scito input.mozilla.org e saiâ poscibile scrive i comenti in sciâ teu esperiensa con e10s.
+mozNameTemplate = %1$S %2$S
+mozstdName = Disconnect.me proteçion baze (consegiou).
+mozstdDesc = Permette quarche elemento ch'o tracia pe garantî o bon fonçionamento di sciti.
+mozfullName = Disconnect.me proteçion mascima.
+mozfullDesc = Blòcca i elementi che tracian conosciui. Quarche scito o porieiva no fonçionâ ben
+offlineAppsList.height = 7em
+removeSelectedCookies = Scancella seleçionou;Scancella seleçionæ
+veryLargeMinimumFontTitle = Dimenscion minima di caratteri tròppo erta
+veryLargeMinimumFontWarning = L'é inpostou 'na dimenscion minima di caratteri tròppo grande (ciù de 24 pixel). Sta cösa chi a porieiva rende difiçile ò adreitua inposcibile l’uzo de quarche pagina inportante de configuraçion.
