--- a/lij/dom/chrome/accessibility/AccessFu.properties
+++ b/lij/dom/chrome/accessibility/AccessFu.properties
@@ -233,7 +233,7 @@ paragraphAbbr = paragrafo
 entryAbbr = voxe
 captionAbbr = didascalia
 headingAbbr = titolo
-sectionAbbr = seçion
+sectionAbbr = sescion
 formAbbr = modolo
 comboboxlistAbbr = elenco cazellae combinâ
 comboboxoptionAbbr = elem. casella combinâ
