--- a/lij/toolkit/chrome/global/devtools/gcli.properties
+++ b/lij/toolkit/chrome/global/devtools/gcli.properties
@@ -69,7 +69,7 @@ disconnectReply = Scancelæ %S comandi.
 globalDesc = Cangia JS global
 globalWindowDesc = O neuvo barcon/global
 globalOutput = JS global o l'é oua %S
-clearDesc = Sveua a seçion output
+clearDesc = Sveua a sescion output
 langDesc = Scrivi comandi inti atri lengoazzi
 langOutput = Da sto momento vegne adeuviou %S
 prefDesc = Comandi pe controlâ e inpostaçioin
