--- a/lij/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/lij/toolkit/chrome/global/devtools/gclicommands.properties
@@ -67,10 +67,10 @@ inspectManual = Analizza e dimenscioin e-e propietâæ de 'n'elemento adeuviando
 inspectNodeDesc = Seletô CSS
 inspectNodeManual = Un seletô CSS da deuviâ con document.querySelector pe identificâ 'n'elemento sencio
 eyedropperDesc = Catura 'n cô inta pagina
-eyedropperManual = Arve 'n panello ch'o l'ingrandisce 'na seçion da pagina pe vedde i pixel e copiâ o còdice do cô
+eyedropperManual = Arve 'n panello ch'o l'ingrandisce 'na sescion da pagina pe vedde i pixel e copiâ o còdice do cô
 eyedropperTooltip = Catura 'n cô inta pagina
 tiltDesc = Fanni vedde a pagina web in 3D
-tiltManual = Analizza e relaçioin e-e dipendense tra e diversce seçioin de 'na pagina web inte 'n'anbiente tridimenscionâ
+tiltManual = Analizza e relaçioin e-e dipendense tra e diversce sescioin de 'na pagina web inte 'n'anbiente tridimenscionâ
 tiltOpenDesc = Arvi a vixoalizaçion Analixi 3D
 tiltOpenManual = Inizializza o strumento de Analisi 3D e seleçionn-a 'n groppo deuviando 'n seletô CSS (facoltativo)
 tiltToggleTooltip = Vixoalizaçion 3D
@@ -234,7 +234,7 @@ cookieListOutPath = Percorso:
 cookieListOutExpires = Scazze:
 cookieListOutAttributes = Atribui:
 cookieListOutNone = Nisciun
-cookieListOutSession = Quande se særa o navegatô (seçion)
+cookieListOutSession = Quande se særa o navegatô (sescion)
 cookieListOutNonePage = Nisciun cookie pe sta pagina
 cookieListOutNoneHost = Nisciun cookie po-u server %1$S
 cookieListOutEdit = Cangia
@@ -251,7 +251,7 @@ cookieSetPathDesc = O percorso (path) do cookie da inpostâ
 cookieSetDomainDesc = O dòminio do cookie da inpostâ
 cookieSetSecureDesc = Trasmisso solo via https
 cookieSetHttpOnlyDesc = No acesibile da script löo client
-cookieSetSessionDesc = Valido solo pe-a duata da seçion do navegatô
+cookieSetSessionDesc = Valido solo pe-a duata da sescion do navegatô
 cookieSetExpiresDesc = Dæta de scadensa do cookie (in formou RFC2822 delimitou ò ISO 8601)
 jsbDesc = JavaScript beautifier
 jsbUrlDesc = L’URL do file JS da riformatâ
