[ach] update from Pootle (firefox-beta)

--- a/ach/browser/chrome/browser/browser-pocket.properties
+++ b/ach/browser/chrome/browser/browser-pocket.properties
@@ -8,6 +8,7 @@ continueff = Mede ki Firefox
 errorgeneric = Bal otime ikare me teme me gwoko i Pocket.
 learnmore = Nong ngec mapol
 loginnow = Dony iye
+maxtaglength = Nyig coc gik i 25
 mustbeconnected = Myero i bed ma i kube i intanet me gwoko i Pocket. Tim ber i rot kube mamegi ka i tem doki.
 onlylinkssaved = Kitwero gwoko kakube keken
 pagenotsaved = Pe kigwoko potbuk
@@ -26,3 +27,4 @@ taglinestory_two = Nen i Pocket ikom nyonyo mo keken, cawa mo keken.
 tagssaved = Kimedo lanyut
 signinfirefox = Dony iye ki Firefox
 signupfirefox = Cone ki Firefox
+viewlist = Nen jami
