--- a/ach/browser/chrome/browser/browser.properties
+++ b/ach/browser/chrome/browser/browser.properties
@@ -747,6 +747,7 @@ readingList.promo.firstUse.readerView.body = Kwany anywenanywena me wek i ket cw
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
 e10s.offerPopup.mainMessage = Tic mapol tye kabino cokcoki bot %S. Itwero cako tic kwede me nongo ber pa tic kwede mogo con.
+e10s.offerPopup.highlight2 = Poto ma nok
 e10s.offerPopup.enableAndRestart.label = Ye kadong i nwo cako
 e10s.offerPopup.enableAndRestart.accesskey = Y
 e10s.offerPopup.noThanks.label = Pe, apwoyo
@@ -754,6 +755,7 @@ e10s.offerPopup.noThanks.accesskey = P
 e10s.postActivationInfobar.message = Kombedi dong itye ka konyo me temo tic mapol i %S! Tim ber i mi ripot pi bal ma inongo.
 e10s.postActivationInfobar.learnMore.label = Nong ngec mapol
 e10s.postActivationInfobar.learnMore.accesskey = N
+e10s.accessibilityNotice.mainMessage = Tic mapol pud pe cako ttic me donyo. Tic mapol bijuke woko ka i cako %S odoco. Imito cako odoc?
 e10s.accessibilityNotice.disableAndRestart.label = Juki kadong i nwo cako
 e10s.accessibilityNotice.disableAndRestart.accesskey = n
 e10s.accessibilityNotice.dontDisable.label = Pe ijuki
