l10:lij new translation part19

--- a/lij/browser/installer/nsisstrings.properties
+++ b/lij/browser/installer/nsisstrings.properties
@@ -23,7 +23,7 @@ WIN_CAPTION=Instalaçion de $BrandShortName
 INTRO_BLURB1=Graçie de avei çernuo o $BrandFullName, o navegatô ch'o te mette a-o primmo pòsto.
 
 INSTALL_BLURB1=Òua ti proviæ o megio do megio inta velocitæ, flescibilitæ e seguessa ch'a te fâ stâ de longo in pin contròllo da scitoaçion.
-INSTALL_BLURB2=Questo perché o $BrandShortName o l'é fæto da 'na soçietæ sensa fin de goagno pe dâ 'na megio navegaçion e Ræ pe ti.
+INSTALL_BLURB2=Questo perché o $BrandShortName o l'é fæto da 'na societæ sensa fin de goagno pe dâ 'na megio navegaçion e Ræ pe ti.
 INSTALL_BLURB3=E in ciù t'intri inte 'na comunitæ globale de utenti, contribuitoî e svilupatoî che travaggian pe fâ o megio navegatô do mondo.
 
 WARN_MIN_SUPPORTED_OS_MSG=Me spiaxe, o $BrandShortName o no peu ese instalou. Sta verscion de $BrandShortName a veu ${MinSupportedVer} ò ciù neuva.
