l10:lij new translation part21

--- a/lij/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/lij/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -4,8 +4,8 @@
 
 history-panelmenu.label = Stöia
 history-panelmenu.tooltiptext2 = Veddi a stöia (%S)
-privatebrowsing-button.label = Barcon anònimo\u00AD
-privatebrowsing-button.tooltiptext = Arvi 'n neuvo barcon anònimo (%S)
+privatebrowsing-button.label = Barcon privou\u00AD
+privatebrowsing-button.tooltiptext = Arvi 'n neuvo barcon privou (%S)
 save-page-button.label = Sarva pagina
 save-page-button.tooltiptext3 = Sarva sta pagina (%S)
 find-button.label = Treuva
