--- a/lij/mobile/android/chrome/browser.properties
+++ b/lij/mobile/android/chrome/browser.properties
@@ -226,7 +226,7 @@ contextmenu.selectWord = Seleçionn-a paròlla
 selectHelper.closeMultipleSelectDialog=Fæto
 
 # Web Console API
-stacktrace.anonymousFunction=<anònimo>
+stacktrace.anonymousFunction=<privou>
 stacktrace.outputMessage=Traccia do Stack  da %S, fonçion %S, linia %S.
 timer.start=%S: releuio inandiou
 
