--- a/lij/toolkit/chrome/global/devtools/gclicommands.properties
+++ b/lij/toolkit/chrome/global/devtools/gclicommands.properties
@@ -285,7 +285,7 @@ calllogChromeStartReply = Registraçion ciamæ inandiâ.
 calllogChromeStopDesc = Blòcca registraçion ciamæ de fonçion
 calllogChromeStopNoLogging = Oua a no l'é ativa nisciunn-a registraçion de ciamæ po-u còdice chrome
 calllogChromeStopReply = Registraçion ciamæ blocâ. Contesti ativi: %1$S.
-callLogChromeAnonFunction = <anònimo>
+callLogChromeAnonFunction = <privou>
 callLogChromeMethodCall = Metodo de ciamâ
 callLogChromeInvalidJSM = JSM no valido
 callLogChromeVarNotFoundContent = Variabile no atrovâ into barcon content.
