--- a/lij/browser/chrome/browser/devtools/webconsole.properties
+++ b/lij/browser/chrome/browser/devtools/webconsole.properties
@@ -107,7 +107,7 @@ gcliterm.instanceLabel=Istansa de %S
 # LOCALIZATION NOTE (stacktrace.anonymousFunction):
 # This string is used to display JavaScript functions that have no given name -
 # they are said to be anonymous. See stacktrace.outputMessage.
-stacktrace.anonymousFunction=<anònimo>
+stacktrace.anonymousFunction=<privou>
 
 # LOCALIZATION NOTE (timerStarted):
 # This string is used to display the result of the console.time() call.
