[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/browser.properties
+++ b/uz/browser/chrome/browser/browser.properties
@@ -49,14 +49,17 @@ addonInstall.acceptButton.accesskey=O
 # #1 is brandShortName
 # #2 is the number of add-ons being installed
 addonConfirmInstall.message=Ushbu sayt qo‘shimcha dasturni #1:’ga o‘rnatishni xohlaydi;Ushbu sayt #2 ta qo‘shimcha dasturni #1: ga o‘rnatishni xohlaydi
+addonConfirmInstallUnsigned.message=Diqqat: Bu sayt tasdiqlanmagan qo‘shimcha dasturni #1’ga o‘rnatmoqchi. Xavfdan qo‘rqmasangiz, davom ettiring.;Diqqat: Ushbu sayt #2 ta tasdiqlanmagan qo‘shimcha dasturni #1’ga o‘rnatmoqchi. Xavfdan qo‘rqmasangiz, davom ettiring.
 
 # LOCALIZATION NOTE (addonConfirmInstallSomeUnsigned.message):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName
 # #2 is the total number of add-ons being installed (at least 2)
+addonConfirmInstallSomeUnsigned.message=;Diqqat: Ushbu sayt ba’zilari tasdiqlanmagan #2 ta tasdiqlanmagan qo‘shimcha dasturni #1’ga o‘rnatmoqchi. Xavfdan qo‘rqmasangiz, davom ettiring.
 
 addonwatch.slow=%1$S %2$Sni sekin ishlashiga sabab bo‘lishi mumkin
+addonwatch.disable.label=%S’ni &o‘chirish
 addonwatch.ignoreSession.label=Hozircha rad qilish
 addonwatch.ignoreSession.accesskey=r
 addonwatch.ignorePerm.label=Butunlay rad qilish
@@ -80,10 +83,12 @@ addonInstallError-1=Qo‘shimcha dasturlarni yuklab bo‘lmadi, chunki internetg
 addonInstallError-2=Ushbu qo‘shimcha dasturni o‘rnatib bo‘lmaydi, chunki u kutilgan %1$S qo‘shimcha dasturiga mos kelmaydi.
 addonInstallError-3=Saytdan yuklangan qo‘shimcha dasturni o‘rnatib bo‘lmaydi, chunki u buzilganga o‘xshaydi.
 addonInstallError-4=%2$S’ni o‘rnatib bo‘lmaydi, chunki %1$S kerakli faylni o‘zgartira olmaydi.
+addonInstallError-5=%1$S ushbu sahifani tasdiqlanmagan qo‘shimcha dastur o‘rnatishiga yo‘l qo‘ymadi.
 addonLocalInstallError-1=Qo‘shimcha dasturni o‘rnatib bo‘lmaydi, chunki fayl tizimda xato bor.
 addonLocalInstallError-2=Ushbu qo‘shimcha dasturni o‘rnatib bo‘lmaydi, chunki u kutilgan %1$S qo‘shimcha dasturiga mos kelmaydi.
 addonLocalInstallError-3=Ushbu qo‘shimcha dasturni o‘rnatib bo‘lmaydi, chunki u buzilganga o‘xshaydi.
 addonLocalInstallError-4=%2$S’ni o‘rnatib bo‘lmaydi, chunki %1$S kerakli faylni o‘zgartira olmaydi.
+addonLocalInstallError-5=Ushbu qo‘shimcha dasturni o‘rnatib bo‘lmaydi, chunki u tasdiqlanmagan.
 
 # LOCALIZATION NOTE (addonInstallErrorIncompatible):
 # %1$S is the application name, %2$S is the application version, %3$S is the add-on name
