--- a/uz/browser/chrome/browser/browser.properties
+++ b/uz/browser/chrome/browser/browser.properties
@@ -97,6 +97,9 @@ addonInstallErrorIncompatible=%3$S’ni o‘rnatib bo‘lmaydi, chunki u %1$S %2
 # LOCALIZATION NOTE (addonInstallErrorBlocklisted): %S is add-on name
 addonInstallErrorBlocklisted=%S o‘rnatilmadi, chunki unda kompyuteringizni yaxshi ishlamasligiga va xavfsizlik muammolariga sabab bo‘luvchi yuqori xavf bor.
 
+unsignedAddonsDisabled.message=Bir yoki bir nechta o‘rnatilgan qo‘shimcha dasturlar tasdiqdan o‘tmadi, shuning uchun ular o‘chirib qo‘yildi.
+unsignedAddonsDisabled.learnMore.label=Ko‘proq o‘rganish
+unsignedAddonsDisabled.learnMore.accesskey=K
 
 # LOCALIZATION NOTE (deveditionTheme.name): This should be nearly the brand name for aurora.
 # See browser/branding/aurora/locales/*/brand.properties
@@ -328,9 +331,15 @@ identity.identified.state_and_country=%S, %S
 
 identity.unknown.tooltip=Ushbu veb sahifa ma’lumotni tasdiqdan o‘tkaza olmaydi.
 
+trackingProtection.intro.title=Kuzatishdan himoyalanish qanday ishlaydi
 # LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
+trackingProtection.intro.description=Qalqon rasmi ko‘rinsa, Firefox sizni kuzatayotgan tarkibni faol tarzda bloklayotgan bo‘ladi.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
+trackingProtection.intro.step1of3=1/3
+trackingProtection.intro.nextButton.label=Keyingi
 
+trackingProtection.icon.activeTooltip=Kuzatishga urinishlar bloklandi
+trackingProtection.icon.disabledTooltip=Kuzatuvchi tarkib aniqlandi
 
 # Edit Bookmark UI
 editBookmarkPanel.pageBookmarkedTitle=Sahifa xatcho‘plarga qo‘shildi
@@ -376,6 +385,11 @@ webNotifications.showFromSite2=Ushbu saytdan bildirishnomalar ko‘rsatilishini 
 
 # Push Notifications
 push.allowForSession=Seans uchun ruxsat berish
+push.allowForSession.accesskey=S
+push.alwaysAllow=Doimo eslatmalar bloklansin
+push.alwaysAllow.accesskey=A
+push.alwaysBlock=Doimo eslatmalar bloklansin
+push.alwaysBlock.accesskey=B
 push.enablePush2=Ushbu sayt uchun bildirishnomalar turtkisiga ruxsat berishni xohlaysizmi?
 
 # Pointer lock UI
@@ -387,6 +401,7 @@ pointerLock.alwaysAllow.accesskey=A
 pointerLock.neverAllow=Hech qachon yashirishga ruxsat berilmasin
 pointerLock.neverAllow.accesskey=N
 pointerLock.title3=Sichqoncha ko‘rsatkichini ushbu saytda yashirilishiga ruxsat bermoqchimisiz?
+pointerLock.autoLock.title3=Bu sayt ko‘rsatkichni yashiradi.
 
 # Phishing/Malware Notification Bar.
 # LOCALIZATION NOTE (notAForgery, notAnAttack)
@@ -400,6 +415,7 @@ safebrowsing.notAForgeryButton.accessKey=q
 safebrowsing.reportedAttackSite=Hujumkor sayt haqida xabar berildi!
 safebrowsing.notAnAttackButton.label=Bu hujumkor sayt emas…
 safebrowsing.notAnAttackButton.accessKey=h
+safebrowsing.reportedUnwantedSite=Keraksiz deb hisoblangan dasturiy ta’minot sayti haqida xabar berildi!
 
 # Ctrl-Tab
 # LOCALIZATION NOTE (ctrlTab.listAllTabs.label): #1 represents the number
@@ -483,6 +499,7 @@ webapps.uninstall.accesskey = U
 webapps.doNotUninstall = O‘rnatilmasin
 webapps.doNotUninstall.accesskey = D
 #LOCALIZATION NOTE (webapps.requestUninstall) %1$S is the web app name
+webapps.requestUninstall = \u0020"%1$S"ni o‘chirishni xohlaysizmi?
 
 # LOCALIZATION NOTE (fullscreen.entered): displayed when we enter HTML5 fullscreen mode, %S is the domain name of the focused website (e.g. mozilla.com).
 fullscreen.entered=%S hozirda "Butun ekranga" usulida.
@@ -541,7 +558,10 @@ getUserMedia.shareCamera.message = kameringizni %S bilan bo‘lishishni xohlaysi
 getUserMedia.shareMicrophone.message = Mikrofoningizni %S bilan bo‘lishishni xohlaysizmi?
 getUserMedia.shareScreen.message = Ekraningizni %S bilan bo‘lishishni xohlaysizmi?
 getUserMedia.shareCameraAndMicrophone.message = Kamera va mikrofoningizni %S bilan bo‘lishini xohlaysizmi?
+getUserMedia.shareCameraAndAudioCapture.message = Kamera va ushbu ichki oynadagi mikrofonni %S bilan bo‘lishini xohlaysizmi?
 getUserMedia.shareScreenAndMicrophone.message = Mikrofoningiz va ekraningizni %S bilan bo‘lishishni xohlaysizmi?
+getUserMedia.shareScreenAndAudioCapture.message = Ushbu ichki oynaning audiosi va ekraningizni %S bilan bo‘lishini xohlaysizmi?
+getUserMedia.shareAudioCapture.message = Ushbu ichki oynadagi mikrofonni %S bilan bo‘lishini xohlaysizmi?
 getUserMedia.selectWindow.label=Bo‘lishish uchun oyna:
 getUserMedia.selectWindow.accesskey=o
 getUserMedia.selectScreen.label=Bo‘lishish uchun ekran
@@ -583,6 +603,7 @@ getUserMedia.sharingApplication.message = Siz hozirda ushbu sahifa bilan ilova d
 getUserMedia.sharingScreen.message = Siz hozirda ushbu sahifa bilan ekrangizni bo‘lishgansiz.
 getUserMedia.sharingWindow.message = Siz hozirda ushbu sahifa bilan oynangizni bo‘lishgansiz.
 getUserMedia.sharingBrowser.message = Siz hozirda ushbu sahifa bilan oynangizni bo‘lishyapsiz.
+getUserMedia.sharingAudioCapture.message = Siz hozirda ichki oynadagi audioni ushbu sahifa bilan bo‘lishyapsiz.
 getUserMedia.continueSharing.label = Bo‘lishishda davom etish
 getUserMedia.continueSharing.accesskey = d
 getUserMedia.stopSharing.label = Bo‘lishishni to‘xtatish
@@ -622,6 +643,7 @@ getUserMedia.sharingMenu.accesskey = Q
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (kamera)
 getUserMedia.sharingMenuMicrophone = %S (mikrofon)
+getUserMedia.sharingMenuAudioCapture = %S (ichki oynadagi audio)
 getUserMedia.sharingMenuApplication = %S (ilova dastur)
 getUserMedia.sharingMenuScreen = %S (ekran)
 getUserMedia.sharingMenuWindow = %S (oyna)
@@ -631,6 +653,11 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon va il
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon va ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon va oyna)
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (kamera, mikrofon va ichki oyna)
+getUserMedia.sharingMenuCameraAudioCapture = %S (kamera va ichki oyna audiosi)
+getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (kamera, ichki oyna audiosi va ilova dastur)
+getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (kamera, ichki oyna audiosi va ekran)
+getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (kamera, ichki oyna audiosi va oyna)
+getUserMedia.sharingMenuCameraAudioCaptureBrowser = %S (kamera, ichki oyna audiosi va ichki oyna)
 getUserMedia.sharingMenuCameraApplication = %S (kamera va ilova dastur)
 getUserMedia.sharingMenuCameraScreen = %S (kamera va ekran)
 getUserMedia.sharingMenuCameraWindow = %S (kamera va oyna)
@@ -639,6 +666,10 @@ getUserMedia.sharingMenuMicrophoneApplication = %S (mikrofon va ilova dastur)
 getUserMedia.sharingMenuMicrophoneScreen = %S (mikrofon va ekran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrofon va oyna)
 getUserMedia.sharingMenuMicrophoneBrowser = %S (mikrofon va ichki oyna)
+getUserMedia.sharingMenuAudioCaptureApplication = %S (ichki oyna audiosi va ilova dastur)
+getUserMedia.sharingMenuAudioCaptureScreen = %S (ichki oyna audiosi va ekran)
+getUserMedia.sharingMenuAudioCaptureWindow = %S (ichki oyna audiosi va oyna)
+getUserMedia.sharingMenuAudioCaptureBrowser = %S (ichki oyna audiosi va ichki oyna)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Manbasi noma’lum
@@ -728,3 +759,12 @@ readingList.promo.firstUse.readerView.body = Chalg‘ituvchilarni olib tashlang,
 # on the pre-release channels. They won't be used in release but they will likely be used in
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
+e10s.offerPopup.highlight1 = Javob berish yaxshilandi
+e10s.offerPopup.highlight2 = Nosozliklar kamaydi
+e10s.offerPopup.enableAndRestart.label = Yoqish va qayta ishga tushirish
+e10s.offerPopup.enableAndRestart.accesskey = Y
+e10s.offerPopup.noThanks.label = Yo‘q, rahmat
+e10s.offerPopup.noThanks.accesskey = Y
+e10s.postActivationInfobar.message = Siz hozirda %S’da multi-jarayonni sinashda yordam beryapsiz! Iltimos, topgan muammolaringiz haqida xabar bering.
+e10s.postActivationInfobar.learnMore.label = Ko‘proq o‘rganish
+e10s.postActivationInfobar.learnMore.accesskey = K
