[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/accounts.properties
+++ b/uz/browser/chrome/browser/accounts.properties
@@ -25,6 +25,7 @@ resendVerificationEmail.label = Qayta jo‘natish
 resendVerificationEmail.accessKey = Q
 
 # LOCALIZATION NOTE (reconnectDescription) - %S = Email address of user's Firefox Account
+reconnectDescription = %Sni qayta ulash
 
 forgetMigration.label = Unutish
 forgetMigration.accessKey = U
