--- a/uz/browser/chrome/browser/browser-pocket.properties
+++ b/uz/browser/chrome/browser/browser-pocket.properties
@@ -2,6 +2,12 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+addtags = Teglar qo‘shish
+alreadyhaveacct = Cho‘ntak xizmatidan foydalanib kelasizmi?
+continueff = Firefox bilan davom ettirish
+errorgeneric = Cho‘ntakka saqlashga urinishda xatolik yuz berdi.
 learnmore = Ko‘proq o‘rganish
+loginnow = Kirish
+maxtaglength = Faqat 25 tagacha belgidan iborat teg kiritish mumkin
 save = Saqlash
 saving = Saqlanmoqda…
