[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/browser-pocket.properties
+++ b/uz/browser/chrome/browser/browser-pocket.properties
@@ -9,5 +9,23 @@ errorgeneric = Cho‘ntakka saqlashga urinishda xatolik yuz berdi.
 learnmore = Ko‘proq o‘rganish
 loginnow = Kirish
 maxtaglength = Faqat 25 tagacha belgidan iborat teg kiritish mumkin
+mustbeconnected = Cho‘ntak’ka saqlash buyrug‘iga ko‘ra siz internetga ulangan bo‘lishingiz kerak. Ulanishni tekshirib ko‘ring va qaytadan urinib ko‘ring.
+onlylinkssaved = Faqat havolalarni saqlash mumkin
+pagenotsaved = Sahifa saqlanmadi
+pageremoved = Sahifa olib tashlandi
+pagesaved = Cho‘ntakka saqlandi
+processingremove = Sahifa olib tashlanmoqda…
+processingtags = Teglar qo‘shilmoqda…
+removepage = Sahifani olib tashlash
 save = Saqlash
 saving = Saqlanmoqda…
+signupemail = E-pochta yordamida ro‘yxatdan o‘tish
+signuptosave = Cho‘ntak uchun ro‘yxatdan o‘tish. Bu bepul.
+suggestedtags = Tavsiya qilingan teglar
+tagline = Maqola va videolarni Firefox’dan Cho‘ntak’ka har qanday qurilmada, xohlagan vaqtda ko‘rish uchun saqlang.
+taglinestory_one = Har qanday maqola, video yoki sahifani Firefox’dan saqlash uchun Cho‘ntak tugmasiga bosing.
+taglinestory_two = Har qanday qurilmada, xohlagan vaqtda Cho‘ntak’da ko‘ring.
+tagssaved = Teglar qo‘shildi
+signinfirefox = Firefox yordamida kirish
+signupfirefox = Firefox yordamida ro‘yxatdan o‘tish
+viewlist = Ro‘yxatni ko‘rish
