--- a/uz/browser/chrome/browser/browser.properties
+++ b/uz/browser/chrome/browser/browser.properties
@@ -759,6 +759,7 @@ readingList.promo.firstUse.readerView.body = Chalg‘ituvchilarni olib tashlang,
 # on the pre-release channels. They won't be used in release but they will likely be used in
 # beta starting from version 41, so it's still useful to have these strings properly localized.
 # %S is brandShortName
+e10s.offerPopup.mainMessage = Multi-jarayoni tezda %S’ga qo‘shiladi. Ba’zi foydali xususiyatlardan ertaroq foydalanish uchun siz undan foydalanishni hoziroq boshlashingiz mumkin:
 e10s.offerPopup.highlight1 = Javob berish yaxshilandi
 e10s.offerPopup.highlight2 = Nosozliklar kamaydi
 e10s.offerPopup.enableAndRestart.label = Yoqish va qayta ishga tushirish
@@ -768,3 +769,8 @@ e10s.offerPopup.noThanks.accesskey = Y
 e10s.postActivationInfobar.message = Siz hozirda %S’da multi-jarayonni sinashda yordam beryapsiz! Iltimos, topgan muammolaringiz haqida xabar bering.
 e10s.postActivationInfobar.learnMore.label = Ko‘proq o‘rganish
 e10s.postActivationInfobar.learnMore.accesskey = K
+e10s.accessibilityNotice.mainMessage = Multi-jarayon hozircha qulaylik xususiyatlari bilan ishlay olmaydi. Agar %S’ni qayta ishga tushirsangiz, multi-jarayon o‘chirib qo‘yiladi. Qayta ishga tushirishni xohlaysizmi?
+e10s.accessibilityNotice.disableAndRestart.label = O‘chirib qo‘yish va qayta ishga tushirish
+e10s.accessibilityNotice.disableAndRestart.accesskey = q
+e10s.accessibilityNotice.dontDisable.label = O‘chirib qo‘yilmasin
+e10s.accessibilityNotice.dontDisable.accesskey = O
