--- a/uz/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/uz/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,6 +99,7 @@ loop-call-button3.label = Salom
 loop-call-button3.tooltiptext = Suhbatni boshlash
 # LOCALIZATION NOTE(loop-call-button3-pb.tooltiptext): Shown when the button is
 # placed inside a Private Browsing window. %S is the value of loop-call-button3.label.
+loop-call-button3-pb.tooltiptext = %S Maxfiy ko‘rishda mavjud emas
 
 social-share-button.label = Ushbu sahifani bo‘lishish
 social-share-button.tooltiptext = Ushbu sahifani bo‘lishish
@@ -117,4 +118,8 @@ devtools-webide-button2.tooltiptext = WebIDE (%S)ni ochish
 
 # LOCALIZATION NOTE(pocket-button.label, pocket-button.tooltiptext): "Pocket"
 # is a brand name.
+pocket-button.label = Cho‘ntak
+pocket-button.tooltiptext = Cho‘ntak’da saqlash
 
+e10s-button.label = Yangi Non-e10s oyna
+e10s-button.tooltiptext = Yangi Non-e10s oyna ochish
