[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/devtools/debugger.properties
+++ b/uz/browser/chrome/browser/devtools/debugger.properties
@@ -80,6 +80,7 @@ noGlobalsText=Globallar yo‘q
 
 # LOCALIZATION NOTE (noWorkersText): The text to display in the workers list
 # when there are no workers.
+noWorkersText=Ushbu sahifada ishchilar yo‘q.
 
 # LOCALIZATION NOTE (noSourcesText): The text to display in the sources list
 # when there are no sources.
