--- a/uz/browser/chrome/browser/devtools/filterwidget.properties
+++ b/uz/browser/chrome/browser/devtools/filterwidget.properties
@@ -13,6 +13,7 @@ emptyFilterList=Filter ko‘rsatilmagan
 
 # LOCALIZATION NOTE (emptyPresetList):
 # This string is displayed when preset's list is empty
+emptyPresetList=Siz birorta ham oldindan o‘rnatishni saqlamagansiz. Siz filterlarni oldindan o‘rnatishni nomini tanlab, so‘ngra ularni saqlab joylashtirishingiz mumkin. Oldindan o‘rnatishlardan tezkor foydalanish mumkin va ulardan qayta foydalanish oson bo‘ladi.
 
 # LOCALIZATION NOTE (addUsingList):
 # This string is displayed under [emptyFilterList] when filter's
