--- a/uz/browser/chrome/browser/devtools/har.properties
+++ b/uz/browser/chrome/browser/devtools/har.properties
@@ -13,8 +13,10 @@
 # LOCALIZATION NOTE (har.responseBodyNotIncluded): A label used within
 # HAR file explaining that HTTP response bodies are not includes
 # in exported data.
+har.responseBodyNotIncluded=Asosiy qism javoblari qo‘shilmagan.
 
 # LOCALIZATION NOTE (har.responseBodyNotIncluded): A label used within
 # HAR file explaining that HTTP request bodies are not includes
 # in exported data.
+har.requestBodyNotIncluded=Asosiy qism soʻrovi va qo‘shilmagan.
 
