[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/browser.properties
+++ b/uz/browser/chrome/browser/browser.properties
@@ -58,13 +58,13 @@ addonConfirmInstallUnsigned.message=Diqqat: Bu sayt tasdiqlanmagan qo‘shimcha 
 # #2 is the total number of add-ons being installed (at least 2)
 addonConfirmInstallSomeUnsigned.message=;Diqqat: Ushbu sayt ba’zilari tasdiqlanmagan #2 ta tasdiqlanmagan qo‘shimcha dasturni #1’ga o‘rnatmoqchi. Xavfdan qo‘rqmasangiz, davom ettiring.
 
-addonwatch.slow=%1$S %2$Sni sekin ishlashiga sabab bo‘lishi mumkin
+addonwatch.slow=%1$S tufaylli %2$S sekin ishlashi mumkin
 addonwatch.disable.label=%S’ni &o‘chirish
 addonwatch.ignoreSession.label=Hozircha rad qilish
 addonwatch.ignoreSession.accesskey=r
 addonwatch.ignorePerm.label=Butunlay rad qilish
 addonwatch.ignorePerm.accesskey=B
-addonwatch.restart.message=%1$Sni o‘chirib qo‘yish uchun %2$Sni o‘chirib-yoqishingiz kerak
+addonwatch.restart.message=%1$S o‘chirib qo‘yilishi uchun %2$S o‘chirib-yoqilishi kerak
 addonwatch.restart.label=%Sni qayta ishga tushirish
 addonwatch.restart.accesskey=q
 
@@ -170,13 +170,13 @@ pluginActivate.learnMore=Ko‘proq o‘rganish…
 # LOCALIZATION NOTE (pluginActivateOutdated.message, pluginActivateOutdated.label):
 # These strings are used when an unsafe plugin has an update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
-pluginActivateOutdated.message=%3$S eskirgan "%1$S" plaginini %2$Sda ishga tushirishga to‘sqinlik qilmoqda.
+pluginActivateOutdated.message=%3$S eskirgan "%1$S" plaginini %2$S’da ishga tushirishga to‘sqinlik qilmoqda.
 pluginActivateOutdated.label=Eskirgan plagin
 pluginActivate.updateLabel=Hozir yangilash…
 # LOCALIZATION NOTE (pluginActivateVulnerable.message, pluginActivateVulnerable.label):
 # These strings are used when an unsafe plugin has no update available.
 # %1$S is the plugin name, %2$S is the domain, and %3$S is brandShortName.
-pluginActivateVulnerable.message=%3$S xavfsiz "%1$S" plaginini %2$Sda ishga tushirishga to‘sqinlik qilmoqda.
+pluginActivateVulnerable.message=%3$S xavfsiz "%1$S" plaginini %2$S’da ishga tushirishga to‘sqinlik qilmoqda.
 pluginActivateVulnerable.label=Zararli plagin!
 pluginActivate.riskLabel=Qanday xavf?
 # LOCALIZATION NOTE (pluginActivateBlocked.message): %1$S is the plugin name, %2$S is brandShortName
