--- a/uz/browser/chrome/browser/newTab.properties
+++ b/uz/browser/chrome/browser/newTab.properties
@@ -12,6 +12,7 @@ newtab.sponsored.button=REKLAMALI
 # LOCALIZATION NOTE(newtab.suggested.button): This text appears for sponsored
 # and suggested tiles on the same line as the tile's title, so prefer short
 # strings to avoid overlap. This string should be uppercase.
+newtab.suggested.tag=TAVSIYA QILINDI
 # LOCALIZATION NOTE(newtab.suggested.button): %1$S will be replaced inline by
 # one of the user's top 100 sites that triggered this suggested tile.
 # This text appears for suggested tiles under the tile's title, so prefer short
@@ -20,10 +21,11 @@ newtab.suggested.button=%1$S ta tashrif buyuruvchilar uchun tavsiya qilingan
 # LOCALIZATION NOTE(newtab.sponsored.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
-newtab.sponsored.explain=Ushbu katak Mozilla hamkorlari nomidan ko‘rsatilgan. Siz xohlagan vaqtingizda %1$Sni bosib, uni olib tashlashingiz mumkin. %2$S
+newtab.sponsored.explain=Ushbu sayt Mozilla hamkorlari nomidan ko‘rsatilgan. Siz xohlagan vaqtingizda %1$S tugmasini bosib, uni olib tashlashingiz mumkin. %2$S
 # LOCALIZATION NOTE(newtab.sponsored.explain2): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
+newtab.sponsored.explain2=Ushbu sayt Mozilla hamkorlari nomidan ko‘rsatilgan. Siz xohlagan vaqtingizda %1$S tugmasini bosib, uni olib tashlashingiz mumkin. %2$S
 # LOCALIZATION NOTE(newtab.suggested.explain): %1$S will be replaced inline by
 # the (X) block icon. %2$S will be replaced by an active link using string
 # newtab.learn.link as text.
@@ -32,9 +34,13 @@ newtab.suggested.explain=Ushbu sayt sizga Mozilla tomonidan tavsiya qilindi. Siz
 # the gear icon used to customize the new tab window. %2$S will be replaced by
 # an active link using string newtab.learn.link as text.
 newtab.enhanced.explain=Mozilla hamkori ushbu katakni ekran rasmini almashtirish bilan anchagina mukammallashtirgan. Siz kengaytirilgan kataklarni %1$S tugmasini bosish bilan o‘chirib qo‘yishingiz mumkin. %2$S
+newtab.intro1.paragraph1=Hozir yangi ichki oynani ochganingizda sizga qiziqarli bo‘lishi mumkin bo‘lgan saytlarni ko‘rasiz. Ba’zilari Mozilla yoki bizni qo‘llab-quvvatlayotgan hamkorlarimizdan biriga tegishli bo‘lishi mumkin.
 # LOCALIZATION NOTE(newtab.intro1.paragraph2): %1$S will be replaced inline by
 # an active link using string newtab.privacy.link as text. %2$S will be replaced
 # inline by the gear icon used to customize the new tab window.
+newtab.intro1.paragraph2=Ushbu xizmatni ko‘rsatish shartlariga muvofiq ba’zi ma’lumotlar bizning %1$S shartlarimizga ko‘ra ravishda bizga jo‘natiladi. Siz uni shesternya rasmchasi (%2$S) ostidagi parametrlardan biridan belgini olib tashlash, o‘chirib qo‘yishingiz mumkin.
 newtab.learn.link=Ko‘proq o‘rganing…
 newtab.privacy.link=Maxfiylik ogohlantirishlari
+newtab.learn.link2=Yangi ichki oyna haqida batafsil ma’lumot
+newtab.intro.header.update=Yangi ichki oyna yangilandi!
 newtab.intro.gotit=Uni ol!
