[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/loop/loop.properties
+++ b/uz/browser/chrome/browser/loop/loop.properties
@@ -55,11 +55,15 @@ problem_accessing_account=Hisobingizga kirishda muammo yuz berdi
 ## the appropriate action.
 retry_button=Qayta urinish
 
+share_email_subject6=Men bilan video suhbat quring
 ## LOCALIZATION NOTE (share_email_body6): In this item, don't translate the
 ## part between {{..}} and leave the \n\n part alone
+share_email_body6=Hozir suhbatga qo‘shilish uchun Firefox Hello  havolasi ustiga bosing: {{callUrl}}
 ## LOCALIZATION NOTE (share_email_body_context2): In this item, don't translate
 ## the part between {{..}} and leave the \n\n part alone.
+share_email_body_context2=Men bilan video suhbat quring. Hozir ulanish uchun Firefox Hello link havolasi ustiga bosing: {{callUrl}}\n\nKeling, yaxshisi bu haqida suhbatimiz davomida gaplashamiz: {{title}}
 ## LOCALIZATION NOTE (share_email_footer): Common footer content for both email types
+share_email_footer=\n\n________\nFirefox Hello bilan suhbatlarga qo‘shilish va video suhbat yaratish juda oson.Video orqali har qanday joydagi, xohlagan kishingiz bilan suhbat qurish juda oson. Biror narsani yuklab olish ham, ro‘yxatdan o‘tish ham shart emas. Bu haqida ushbu saytdan batafsil ma’lumot olishingiz mumkin: http://www.firefox.com/hello
 ## LOCALIZATION NOTE (share_tweeet): In this item, don't translate the part
 ## between {{..}}. Please keep the text below 117 characters to make sure it fits
 ## in a tweet.
@@ -126,8 +130,10 @@ import_contacts_success_message={{total}} ta aloqa muvaffaqiyatli ravishda impor
 sync_contacts_button=Aloqalarni sinxronlash
 ## LOCALIZATION NOTE(no_contacts_message_heading): Title shown when user has no
 ## contacts in his address book
+no_contacts_message_heading=Hali birorta ham kontakt qo‘shilmagan
 ## LOCALIZATION NOTE(no_contacts_import_or_add): Subheading inviting the user
 ## to add people to his contact list
+no_contacts_import_or_add=Import qiling yoki biror kishini qo‘shing
 
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field.
