[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/loop/loop.properties
+++ b/uz/browser/chrome/browser/loop/loop.properties
@@ -146,14 +146,17 @@ import_failed_support_button=Yordam
 remove_contact_menu_button2=Aloqani olib tashlash
 ## LOCALIZATION NOTE(remove_contact_title): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
+remove_contact_menu_button3=Kontaktni olib tashlash
 ## LOCALIZATION NOTE(confirm_delete_contact_alert): This is an alert that is displayed
 ## to confirm deletion of a contact.
 confirm_delete_contact_alert=Ushbu aloqani o‘chirmoqchi ekanligingizga ishonchingiz komilmi?
 ## LOCALIZATION NOTE(confirm_delete_contact_remove_button, confirm_delete_contact_cancel_button):
 ## These are displayed on the alert with confirm_delete_contact_alert
+confirm_delete_contact_remove_button=Kontaktni olib tashlash
 confirm_delete_contact_cancel_button=Bekor qilish
 ## LOCALIZATION NOTE(contact_list_title): This is in uppercase in English for
 ## emphasis, please do what is appropriate for specific locales.
+contact_list_title=MENING KONTAKTLARIM
 
 ## LOCALIZATION NOTE(block_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name, used to block a contact from calling
@@ -214,6 +217,7 @@ active_screenshare_button_title=Bo‘lishishni to‘xtatish
 inactive_screenshare_button_title=Ekranni bo‘lishish
 share_tabs_button_title2=Ichki oynalarni bo‘lishish
 share_windows_button_title=Boshqa oynalarni bo‘lishish
+self_view_hidden_message=O‘zini ko‘rish yashirilgan, ammo hali ham jo‘natsa bo‘ladi; ko‘rish uchun oyna hajmini o‘zgartiring
 
 
 ## LOCALIZATION NOTE (call_with_contact_title): The title displayed
@@ -289,6 +293,7 @@ feedback_rejoin_button=Qayta qo‘shilish
 ## an abusive user.
 feedback_report_user_button=Foydalanuvchi ustidan shikoyat qilish
 feedback_window_heading=Suhbat qanday o‘tdi?
+feedback_request_button=Mulohaza bildirish
 
 help_label=Yordam
 tour_label=Sayohat
@@ -350,3 +355,4 @@ context_learn_more_link_label=Ko‘proq o‘rganing.
 
 # Text chat strings
 
+chat_textbox_placeholder=Bu yerga yozing…
