[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/loop/loop.properties
+++ b/uz/browser/chrome/browser/loop/loop.properties
@@ -192,7 +192,7 @@ video_call_menu_button=Video suhbat
 
 ## LOCALIZATION NOTE(gravatars_promo_message): The {{learn_more}} part will be
 ## replaced with a link with the text content of gravatars_promo_message_learnmore.
-gravatars_promo_message=Aloqalaringizga profil nishonchalarini ularning e-pochta manzillarini Gravatar orqali bo‘lishish orqali avtomatik tarzda qo‘shishingiz mumkin.
+gravatars_promo_message=Kontaktlaringizga profilingiz rasmchalarini qo‘shish uchun ularning e-pochta manzillarini Gravatar yordamida bo‘lishish bilan avtomatik qo‘shishingiz mumkin. {{learn_more}}.
 gravatars_promo_message_learnmore=Ko‘proq o‘rganish
 gravatars_promo_button_nothanks=Yoʻq, rahmat
 gravatars_promo_button_use=Profil nishonchalaridan foydalanish
