--- a/uz/browser/chrome/browser/preferences/preferences.properties
+++ b/uz/browser/chrome/browser/preferences/preferences.properties
@@ -148,3 +148,4 @@ shouldRestartTitle=%S`ni qayta ishga tushirish
 #### e10S
 # LOCALIZATION NOTE (e10sFeedbackAfterRestart): This message appears when the user
 # unchecks "Enable multi-process" on the "General" preferences tab.
+e10sFeedbackAfterRestart=Qaytadan ishga tushirganingizdan so‘ng ichki oynada input.mozilla.org sahifasi ochiladi. U yerga o‘zingizning kuchli tajribangiz haqidagi mulohazalaringizni kiritishingiz mumkin.
