--- a/uz/dom/chrome/layout/HtmlForm.properties
+++ b/uz/dom/chrome/layout/HtmlForm.properties
@@ -5,6 +5,8 @@
 Reset=Uzish
 Submit=Soʻrov joʻnatish
 Browse=Koʻrish
+ChooseFiles=Fayllarni tanlang…
+ChooseDirs=Jildni tanlang…
 FileUpload=Fayl yuklash
 # LOCALIZATION NOTE (IsIndexPromptWithSpace): The last character of the string 
 # should be a space (U+0020) in most locales. The prompt is followed by an 
