--- a/uz/dom/chrome/appstrings.properties
+++ b/uz/dom/chrome/appstrings.properties
@@ -29,6 +29,7 @@ externalProtocolUnknown=<Noma’lum>
 externalProtocolChkMsg=Ushbu turdagi barcha linklar uchun tanlovimni eslab qol.
 externalProtocolLaunchBtn=Ilova dasturni ishga tushirish
 malwareBlocked=%S sayti hujum qiluvchi sayt sifatida ma`lumot berilgan va xavfsizlik moslamalaringizga asoslanib u bloklangan.
+unwantedBlocked=%S sayti shubhali dasturiy ta’minot xizmatini ko‘rsatadigan sayt sifatida ma’lumot berilgan va xavfsizlik moslamalaringizga asoslanib bloklandi.
 phishingBlocked=%S veb sayti foydalanuvchilarning shaxsiy va iqtisodiy ma`lumotlarini tarqatishga asoslangan qallob sayt sifatida xabar berilgan.
 cspBlocked=Bu sahifa ushbu ushbu usulda yuklashga halaqit beradigan xavfsizlik siyosatiga ega.
 corruptedContentError=Siz koʻrmoqchi boʻgan sahifani koʻrsatib boʻlmaydi, chunki ma`lumotlarni uzatishda xato aniqlandi.
