--- a/uz/browser/chrome/browser/devtools/inspector.properties
+++ b/uz/browser/chrome/browser/devtools/inspector.properties
@@ -103,3 +103,4 @@ inspector.menu.copyUrlToClipboard.label=Havola manzilidan nusxa olish
 # clicks on the attribute of a node in the inspector that is the ID of another
 # element in the DOM (like with <label for="input-id">), and that allows to
 # select that element in the inspector.
+inspector.menu.selectElement.label=#%S elementni tanlang
