--- a/uz/browser/chrome/browser/devtools/jsonview.properties
+++ b/uz/browser/chrome/browser/devtools/jsonview.properties
@@ -15,6 +15,7 @@
 # LOCALIZATION NOTE (jsonViewer.tab.JSON, jsonViewer.tab.RawData,
 # jsonViewer.tab.Headers): Label for a panel tab.
 jsonViewer.tab.JSON=JSON
+jsonViewer.tab.RawData=Ma’lumotlar qatori
 jsonViewer.tab.Headers=Bosh qatorlar
 
 # LOCALIZATION NOTE (jsonViewer.responseHeaders, jsonViewer.requestHeaders):
@@ -30,12 +31,16 @@ jsonViewer.Copy=Nusxa olish
 
 # LOCALIZATION NOTE (jsonViewer.PrettyPrint): Label for JSON
 # pretty print action button.
+jsonViewer.PrettyPrint=Ajoyib chop qilish
 
 # LOCALIZATION NOTE (jsonViewer.reps.more): Label used in arrays
 # that have more items than displayed.
+jsonViewer.reps.more=ko‘proq...
 
 # LOCALIZATION NOTE (jsonViewer.filterJSON): Label used in search box
 # at the top right cornder of the JSON Viewer.
+jsonViewer.filterJSON=Filterlash: JSON
 
 # LOCALIZATION NOTE (jsonViewer.reps.reference): Label used for cycle
 # references in an array.
+jsonViewer.reps.reference=Diagramma ma’lumotlari
