--- a/uz/browser/chrome/browser/devtools/storage.properties
+++ b/uz/browser/chrome/browser/devtools/storage.properties
@@ -35,6 +35,7 @@ storage.panelLabel=Ombor paneli
 # This string is displayed in the tooltip of the tab when the storage editor is
 # displayed inside the developer tools window.
 # A keyboard shortcut for Storage Inspector will be shown inside the brackets.
+storage.tooltip3=Ombor nazoratchisi (kukilar, mahalliy ombor …) (%S)
 
 # LOCALIZATION NOTE (tree.emptyText):
 # This string is displayed when the Storage Tree is empty. This can happen when
