--- a/uz/browser/chrome/browser/migration/migration.properties
+++ b/uz/browser/chrome/browser/migration/migration.properties
@@ -6,9 +6,13 @@ profileName_format=%S %S
 
 # Browser Specific
 sourceNameIE=Internet Explorer
+sourceNameEdge=Microsoft Edge
 sourceNameSafari=Safari
+sourceNameCanary=Google Chrome Canary
 sourceNameChrome=Google Chrome
+sourceNameChromium=Chromium
 sourceNameFirefox=Mozilla Firefox
+sourceName360se=360 xavfsiz brauzer
 
 importedBookmarksFolder=%Sdan
 
@@ -21,33 +25,47 @@ importedSafariReadingList=Roʻyxat ("Safari"dan) oʻqilmoqda
 1_edge=Sozlamalar
 1_safari=Moslamalar
 1_chrome=Moslamalar
+1_360se=Parametrlar
 
 2_ie=Kukilar
+2_edge=Kukilar
 2_safari=Kukilar
 2_chrome=Kukilar
 2_firefox=Kukilar
+2_360se=Kukilar
 
 4_ie=Koʻrish tarixi
+4_edge=Koʻrish tarixi
 4_safari=Koʻrish tarixi
 4_chrome=Koʻrish tarixi
 4_firefox_history_and_bookmarks=Tarix va xatchoʻplarni koʻrish
+4_360se=Ko‘rish tarixi
 
 8_ie=Tarix shakli saqlangan
+8_edge=Saqlangan tarix shakli
 8_safari=Tarix shakli saqlangan
 8_chrome=Tarix shakli saqlangan
 8_firefox=Tarix shakli saqlangan
+8_360se=Saqlangan tarix shakli
 
 16_ie=Saqlangan parollar
+16_edge=Saqlangan parollar
 16_safari=Saqlangan parollar
 16_chrome=Saqlangan parollar
 16_firefox=Saqlangan parollar
+16_360se=Saqlangan parollar
 
+32_ie=Yoqqanlari
+32_edge=Yoqqanlari
 32_safari=Xatchoʻplar
 32_chrome=Xatchoʻplar
+32_360se=Xatcho‘plar
 
 64_ie=Boshqa ma`lumotlar
+64_edge=Boshqa ma’lumotlar
 64_safari=Boshqa ma`lumotlar
 64_chrome=Boshqa ma`lumotlar
 64_firefox_other=Boshqa ma’lumotlar
+64_360se=Boshqa ma’lumotlar
 
 128_firefox=Oynalar va ichki oynalar
