[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/devtools/jsonview.properties
+++ b/uz/browser/chrome/browser/devtools/jsonview.properties
@@ -15,7 +15,7 @@
 # LOCALIZATION NOTE (jsonViewer.tab.JSON, jsonViewer.tab.RawData,
 # jsonViewer.tab.Headers): Label for a panel tab.
 jsonViewer.tab.JSON=JSON
-jsonViewer.tab.RawData=Ma’lumotlar qatori
+jsonViewer.tab.RawData=Qayta ishlanmagan ma’lumotlar
 jsonViewer.tab.Headers=Bosh qatorlar
 
 # LOCALIZATION NOTE (jsonViewer.responseHeaders, jsonViewer.requestHeaders):
