--- a/uz/browser/chrome/browser/devtools/performance.properties
+++ b/uz/browser/chrome/browser/devtools/performance.properties
@@ -13,6 +13,7 @@
 # LOCALIZATION NOTE (performance.label):
 # This string is displayed in the title of the tab when the profiler is
 # displayed inside the developer tools window and in the Developer Tools Menu.
+performance.label=Unumdorlik
 
 # LOCALIZATION NOTE (performance.panelLabel):
 # This is used as the label for the toolbox panel.
@@ -21,11 +22,13 @@ performance.panelLabel=Ishlash tezligi paneli
 # LOCALIZATION NOTE (performance.commandkey, performance.accesskey)
 # Used for the menuitem in the tool menu
 performance.commandkey=VK_F5
+performance.accesskey=U
 
 # LOCALIZATION NOTE (performance.tooltip):
 # This string is displayed in the tooltip of the tab when the profiler is
 # displayed inside the developer tools window.
 # Keyboard shortcut for Performance Tools will be shown inside brackets.
+performance.tooltip=Unumdorlik (%S)
 
 # LOCALIZATION NOTE (noRecordingsText): The text to display in the
 # recordings menu when there are no recorded profiles yet.
@@ -50,6 +53,7 @@ recordingsList.loadingLabel=Yuklanmoqda...
 # LOCALIZATION NOTE (recordingsList.durationLabel):
 # This string is displayed in the recordings list of the Performance Tools,
 # for an item that has finished recording.
+recordingsList.durationLabel=%S ms
 
 # LOCALIZATION NOTE (recordingsList.saveLabel):
 # This string is displayed in the recordings list of the Performance Tools,
@@ -66,6 +70,7 @@ graphs.fps=fps
 # This string is displayed in the flamegraph of the Performance Tools,
 # as the unit used to measure time (in milliseconds). This label should be kept
 # AS SHORT AS POSSIBLE so it doesn't obstruct important parts of the graph.
+graphs.ms=ms
 
 # LOCALIZATION NOTE (graphs.memory):
 # This string is displayed in the memory graph of the Performance tool,
@@ -89,9 +94,11 @@ category.tools=Vositalar
 
 # LOCALIZATION NOTE (table.ms):
 # This string is displayed in the call tree after units of time in milliseconds.
+table.ms=ms
 
 # LOCALIZATION NOTE (table.percentage):
 # This string is displayed in the call tree after units representing percentages.
+table.percentage=%
 
 # LOCALIZATION NOTE (table.root):
 # This string is displayed in the call tree for the root node.
@@ -114,12 +121,15 @@ table.zoom.tooltiptext=Ichki oynada kadrni ko‘rib chiqish
 # LOCALIZATION NOTE (table.view-optimizations.tooltiptext):
 # This string is displayed in the icon displayed next to frames that
 # have optimization data
+table.view-optimizations.tooltiptext=Optimallashlarni JIT ko‘rinishida ko‘rish
 
 # LOCALIZATION NOTE (recordingsList.importDialogTitle):
 # This string is displayed as a title for importing a recoring from disk.
+recordingsList.importDialogTitle=Yozib olishlar import qilinmoqda…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogTitle):
 # This string is displayed as a title for saving a recording to disk.
+recordingsList.saveDialogTitle=Yozib olingan fayl saqlanmoqda…
 
 # LOCALIZATION NOTE (recordingsList.saveDialogJSONFilter):
 # This string is displayed as a filter for saving a recording to disk.
@@ -131,6 +141,7 @@ recordingsList.saveDialogAllFilter=Barcha fayllar
 
 # LOCALIZATION NOTE (jit.optimizationFailure):
 # This string is displayed in a tooltip when no JIT optimizations were detected.
+jit.optimizationFailure=Optimallashtirish amalga oshmadi
 
 # LOCALIZATION NOTE (jit.samples):
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
@@ -138,13 +149,16 @@ recordingsList.saveDialogAllFilter=Barcha fayllar
 # frame is sampled.
 # "#1" represents the number of samples
 # example: 30 samples
+jit.samples=#1 ta namuna;#1 ta namuna
 
 # LOCALIZATION NOTE (jit.empty):
 # This string is displayed when there are no JIT optimizations to display.
+jit.empty=Bu frame uchun birorta ham JIT optimallashtirish yozuvi topilmadi.
 
 # LOCALIZATION NOTE (timeline.tick):
 # This string is displayed in the timeline overview, for delimiting ticks
 # by time, in milliseconds.
+timeline.tick=%S ms
 
 # LOCALIZATION NOTE (timeline.records):
 # This string is displayed in the timeline waterfall, as a title for the menu.
