--- a/uz/browser/chrome/browser/devtools/toolbox.properties
+++ b/uz/browser/chrome/browser/devtools/toolbox.properties
@@ -11,12 +11,14 @@ toolboxDockButtons.window.tooltip=Alohida oynada ko‘rsatish
 # when hovering over the minimize button in the toolbar. When clicked, the
 # button minimizes the toolbox so that just the toolbar is visible at the
 # bottom.
+toolboxDockButtons.bottom.minimize=Asboblar panelini yig‘ish
 
 # LOCALIZATION NOTE (toolboxDockButtons.bottom.maximize): This string is shown
 # as a tooltip that appears in the toolbox when it is in "bottom host" mode and
 # when hovering over the maximize button in the toolbar. When clicked, the
 # button maximizes the toolbox again (if it had been minimized before) so that
 # the whole toolbox is visible again.
+toolboxDockButtons.bottom.maximize=Asboblar panelini yoyish
 
 # LOCALIZATION NOTE (toolboxToggleButton.errors): Semi-colon list of plural
 # forms.
@@ -105,8 +107,10 @@ toolbox.noContentProcess.message=Jarayonni bajarish uchun tarkib yo‘q.
 # Used as a message in either tooltips or contextual menu items to open the
 # corresponding URL as a css file in the Style-Editor tool.
 # DEV NOTE: Mostly used wherever toolbox.viewSourceInStyleEditor is used.
+toolbox.viewCssSourceInStyleEditor.label=Faylni uslubni tahrirlagichda ochish
 
 # LOCALIZATION NOTE (toolbox.viewJsSourceInDebugger.label)
 # Used as a message in either tooltips or contextual menu items to open the
 # corresponding URL as a js file in the Debugger tool.
 # DEV NOTE: Mostly used wherever toolbox.viewSourceInDebugger is used.
+toolbox.viewJsSourceInDebugger.label=Faylni tuzatgichda ochish
