--- a/uz/browser/chrome/browser/devtools/webide.properties
+++ b/uz/browser/chrome/browser/devtools/webide.properties
@@ -19,6 +19,8 @@ importPackagedApp_title=Direktoriyani tanlash
 importHostedApp_title=Hostga joylashtirilgan ilova dasturni ochish
 importHostedApp_header=Manifest URL manzilini kiritish
 
+selectCustomBinary_title=Boshqa B2G ikkilikni tanlang
+selectCustomProfile_title=Boshqa Gaia profilini tanlang
 
 notification_showTroubleShooting_label=Nosozliklarni hal etish
 notification_showTroubleShooting_accesskey=T
@@ -44,8 +46,10 @@ error_cantConnectToApp=Ilova dasturga ulana olmadi: %1$S
 error_cantFetchAddonsJSON=Qo‘shimcha dastur ro‘yxatini olib bo‘lmadi: %S
 
 error_appProjectsLoadFailed=Loyiha ro‘yxati yuklanmadi. Agar siz ushbu profilni Firefox’ning yangiroq versiyasi bilan foydalansangiz bu yuz berishi mumkin.
+error_folderCreationFailed=Tanlangan direktoriyada loyiha jildi yaratilmadi.
 
 # Variable: runtime app build ID (looks like this %Y%M%D format) and firefox build ID (same format)
+error_runtimeVersionTooRecent=Ulangan ishga tushirish vaqtida kompyuteringizdagi Firefox (%2$S)dan ko‘ra ancha oldingi tuzilgan sana (%1$S) ko‘rsatilgan. Ushbu mos kelmaydigan o‘rnatish Dev’Tools uchun muammo bo‘lishi mumkin. Iltimos, Firefox brauzerini yangilang.
 
 addons_stable=barqaror
 addons_unstable=barqaror emas
@@ -83,3 +87,6 @@ device_reset_default=Standart holatga tiklash
 
 # Simulator options
 simulator_custom_device=Boshqa
+simulator_custom_binary=Boshqa B2G ikkilik…
+simulator_custom_profile=Boshqa Gaia profili…
+simulator_default_profile=Standart foydalanish
