[az] update from Pootle (firefox-beta)

--- a/az/dom/chrome/accessibility/AccessFu.properties
+++ b/az/dom/chrome/accessibility/AccessFu.properties
@@ -195,6 +195,7 @@ quicknav_Checkbox    = İşarətləmə qutuları
 
 # MathML menclose notations.
 # See developer.mozilla.org/docs/Web/MathML/Element/menclose#attr-notation
+notation-bottom             = alt
 
 # Shortened role names for braille
 menubarAbbr        =       menyu paneli
