[uz] update from Pootle (firefox-beta)

--- a/uz/browser/chrome/browser/devtools/performance.properties
+++ b/uz/browser/chrome/browser/devtools/performance.properties
@@ -170,3 +170,4 @@ timeline.records=YOZIB OLISHLAR
 # %S is the percentage of the buffer used -- there are two "%"s after to escape
 # the % that is actually displayed.
 # Example: "Buffer 54% full"
+profiler.bufferFull=%S%% buferi to‘la
