--- a/uz/browser/chrome/browser/devtools/netmonitor.properties
+++ b/uz/browser/chrome/browser/devtools/netmonitor.properties
@@ -38,6 +38,7 @@ netmonitor.security.state.secure=Ulnish ushbu manbani olishda xavfsizligi uchun 
 # LOCALIZATION NOTE (netmonitor.security.state.insecure)
 # This string is used as an tooltip for request that was performed over insecure
 # channel i.e. the connection was not https
+netmonitor.security.state.insecure=Ushbu manbani olish uchun foydalanilgan ulanish – xavfsiz emas.
 
 # LOCALIZATION NOTE (netmonitor.security.state.broken)
 # This string is used as an tooltip for request that failed due to security
@@ -181,6 +182,7 @@ networkMenu.sizeUnavailable=—
 # LOCALIZATION NOTE (networkMenu.sizeCached): This is the label displayed
 # in the network menu specifying the transferred of a request is
 # cached.
+networkMenu.sizeCached=keshlandi
 
 # LOCALIZATION NOTE (networkMenu.totalMS): This is the label displayed
 # in the network menu specifying the time for a request to finish (in milliseconds).
