--- a/uz/services/sync/sync.properties
+++ b/uz/services/sync/sync.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # %1: the user name (Ed), %2: the app name (Firefox), %3: the operating system (Android)
-client.name2 = %1$S'ning %2$S %3$Sda
+client.name2 = %1$S nomli foydalanuvchining %2$S dasturi %3$S tizimida
 
 # %S is the date and time at which the last sync successfully completed
 lastSync2.label = Soʻnggi sinx-ya: %S
@@ -26,9 +26,9 @@ error.sync.title = Sinx-ya vaqtida xato yuz berdi
 error.sync.description = Sinx-ya qilinayotganda xato yuz berdi: %1$S.  Sinx-ya avtomatik tarzda bu amalni qayta bajarishga urinadi.
 warning.sync.eol.label = Oʻchirish xizmati
 # %1: the app name (Firefox)
-warning.sync.eol.description = Firefox sinx-sh xizmati tezda oʻchiriladi. Sinx-lashni saqlash uchun %1$Sga yangilang.
+warning.sync.eol.description = Sizning Firefox Sinc xizmatingiz tezda o‘chiriladi. Sinxronlashni saqlash uchun %1$S brauzerini yangilang.
 error.sync.eol.label = Xizmat mavjud emas
 # %1: the app name (Firefox)
-error.sync.eol.description = "Firefox sinxronlash" xizmati mavjud emas. Sinxronlashni saqlash uchun %1$Sga yangilang.
+error.sync.eol.description = Sizning Firefox Sync xizmatingiz mavjud emas. Sinxronlashni saqlash uchun %1$S brauzerini yangilang.
 sync.eol.learnMore.label = Ko‘proq o‘rganish
 sync.eol.learnMore.accesskey = o
