--- a/uz/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/uz/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -43,17 +43,17 @@ notification.vulnerableUpdatable.link=Hozir yangilash
 notification.vulnerableNoUpdate=%1$S zararli deb aniqlangan. Ehtiyot boʻlib foydalaning.
 notification.vulnerableNoUpdate.link=Koʻproq ma`lumot
 #LOCALIZATION NOTE (notification.enable) %1$S is the add-on name, %2$S is brand name
-notification.enable=%1$S %2$Sni qayta ishga tushirganingizdan soʻng oʻrnatiladi.
+notification.enable=%1$S %2$S brauzerini qayta ishga tushirganingizdan soʻng oʻrnatiladi.
 #LOCALIZATION NOTE (notification.disable) %1$S is the add-on name, %2$S is brand name
-notification.disable=%1$S %2$Sni qayta ishga tushirganingizdan soʻng oʻchirib qoʻyiladi.
+notification.disable=%1$S %2$S brauzerini qayta ishga tushirganingizdan so‘ng o‘chirib qo‘yiladi.
 #LOCALIZATION NOTE (notification.install) %1$S is the add-on name, %2$S is brand name
-notification.install=%1$S - %2$Sni qayta ishga tushirganingizdan soʻng oʻrnatiladi.
+notification.install=%1$S %2$S brauzerini qayta ishga tushirganingizdan soʻng oʻrnatiladi.
 #LOCALIZATION NOTE (notification.uninstall) %1$S is the add-on name, %2$S is brand name
-notification.uninstall=%1$S - %2$Sni qayta ishga tushirganingizdan soʻng oʻchiriladi.
+notification.uninstall=%1$S %2$S brauzerini qayta ishga tushirganingizdan soʻng oʻchiriladi.
 #LOCALIZATION NOTE (notification.upgrade) %1$S is the add-on name, %2$S is brand name
-notification.upgrade=%1$S - %2$Sni qayta ishga tushirganingizdan soʻng yangilanadi.
+notification.upgrade=%1$S %2$S brauzerini qayta ishga tushirganingizdan soʻng yangilanadi.
 #LOCALIZATION NOTE (notification.downloadError) %1$S is the add-on name.
-notification.downloadError=%1$Sni yuklab olishda xato yuz berdi.
+notification.downloadError=%1$S qo‘shimcha dasturini yuklab olishda xatolik yuz berdi.
 notification.downloadError.retry=Yana urinib koʻrish
 notification.downloadError.retry.tooltip=Bu qoʻshimcha dasturni yana yuklab olishga urinib koʻring
 #LOCALIZATION NOTE (notification.installError) %1$S is the add-on name.
@@ -104,9 +104,9 @@ details.notification.disable=%1$S %2$S qayta ishga tushirilgandan soʻng oʻchir
 #LOCALIZATION NOTE (details.notification.install) %1$S is the add-on name, %2$S is brand name
 details.notification.install=%1$S %2$S qayta ishga tushirilgandan soʻng oʻrnatiladi.
 #LOCALIZATION NOTE (details.notification.uninstall) %1$S is the add-on name, %2$S is brand name
-details.notification.uninstall=%1$S - %2$Sni qayta ishga tushirganingizdan soʻng oʻchiriladi.
+details.notification.uninstall=%1$S %2$S brauzerini qayta ishga tushirganingizdan soʻng oʻchiriladi.
 #LOCALIZATION NOTE (details.notification.upgrade) %1$S is the add-on name, %2$S is brand name
-details.notification.upgrade=%1$S - %2$Sni qayta ishga tushirganingizdan soʻng yangilanadi.
+details.notification.upgrade=%1$S %2$S brauzerini qayta ishga tushirganingizdan soʻng yangilanadi.
 #LOCALIZATION NOTE (details.notification.gmpPending) %1$S is the add-on name
 details.notification.gmpPending=%1$S tezda o‘rnatiladi.
 
