[az] update from Pootle (firefox-beta)

--- a/az/browser/chrome/browser/browser.properties
+++ b/az/browser/chrome/browser/browser.properties
@@ -333,6 +333,7 @@ identity.unknown.tooltip=Bu saytın kimlik məlumatı yoxdur.
 
 trackingProtection.intro.title=İzlənmə Qoruması necə işləyir
 # LOCALIZATION NOTE (trackingProtection.intro.description): %S is brandShortName
+trackingProtection.intro.description=Qalxan görünürsə, bu, Firefox sizi izləyən məzmunu aktiv bir şəkildə bloklayır deməkdir.
 # LOCALIZATION NOTE (trackingProtection.intro.step1of3): Indicates that the intro panel is step one of three in a tour.
 trackingProtection.intro.step1of3=1 / 3
 trackingProtection.intro.nextButton.label=Sonrakı
@@ -557,7 +558,10 @@ getUserMedia.shareCamera.message = Kameranızı %S ilə paylaşmaq istəyirsiniz
 getUserMedia.shareMicrophone.message = Mikrofonunuzu %S ilə paylaşmaq istəyirsiniz?
 getUserMedia.shareScreen.message = Ekranınızı %S ilə paylaşmaq istəyirsiniz?
 getUserMedia.shareCameraAndMicrophone.message = Kamera və mikrofonunuzu %S ilə paylaşmaq istəyirsiniz?
+getUserMedia.shareCameraAndAudioCapture.message = Kamera və vərəqin səsini %S ilə paylaşmaq istəyirsiniz?
 getUserMedia.shareScreenAndMicrophone.message = Mikrofon və ekranınızı %S ilə paylaşmaq istəyirsiniz?
+getUserMedia.shareScreenAndAudioCapture.message = Bu vərəqin səsini və ekranınızı %S ilə paylaşmaq istəyirsiniz?
+getUserMedia.shareAudioCapture.message = Bu vərəqin səsini %S ilə paylaşmaq istəyirsiniz?
 getUserMedia.selectWindow.label=Paylaşılacaq pəncərə:
 getUserMedia.selectWindow.accesskey=p
 getUserMedia.selectScreen.label=Paylaşılacaq pəncərə:
@@ -599,6 +603,7 @@ getUserMedia.sharingApplication.message = Siz hal-hazırda bu səhifə ilə proq
 getUserMedia.sharingScreen.message = Siz hal-hazırda ekranınızı bu səhifə ilə paylaşırsınız.
 getUserMedia.sharingWindow.message = Siz hal-hazırda bu səhifə ilə pəncərə paylaşırsınız.
 getUserMedia.sharingBrowser.message = Siz hal-hazırda bu səhifə ilə vərəq paylaşırsınız.
+getUserMedia.sharingAudioCapture.message = Siz hazırda vərəqin səsini bu səhifə ilə paylaşırsınız.
 getUserMedia.continueSharing.label = Paylaşmağa Davam et
 getUserMedia.continueSharing.accesskey = D
 getUserMedia.stopSharing.label = Paylaşmağı Durdur
@@ -638,6 +643,7 @@ getUserMedia.sharingMenu.accesskey = c
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (kamera)
 getUserMedia.sharingMenuMicrophone = %S (mikrafon)
+getUserMedia.sharingMenuAudioCapture = %S (vərəq səsi)
 getUserMedia.sharingMenuApplication = %S (proqram)
 getUserMedia.sharingMenuScreen = %S (ekran)
 getUserMedia.sharingMenuWindow = %S (pəncərə)
@@ -647,6 +653,11 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon və p
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon və ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon və pəncərə)
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (kamera, mikrofon və vərəq)
+getUserMedia.sharingMenuCameraAudioCapture = %S (kamera və vərəq səsi)
+getUserMedia.sharingMenuCameraAudioCaptureApplication = %S (kamera, vərəq səsi və tətbiqetmə)
+getUserMedia.sharingMenuCameraAudioCaptureScreen = %S (kamera, vərəq səsi və ekran)
+getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (kamera, vərəq səsi və pəncərə)
+getUserMedia.sharingMenuCameraAudioCaptureBrowser = %S (kamera, vərəq səsi və vərəq)
 getUserMedia.sharingMenuCameraApplication = %S (kamera və proqram)
 getUserMedia.sharingMenuCameraScreen = %S (kamera və ekran)
 getUserMedia.sharingMenuCameraWindow = %S (kamera və pəncərə)
@@ -656,6 +667,9 @@ getUserMedia.sharingMenuMicrophoneScreen = %S (mikrafon və ekran)
 getUserMedia.sharingMenuMicrophoneWindow = %S (mikrafon və pəncərə)
 getUserMedia.sharingMenuMicrophoneBrowser = %S (mikrofon və vərəq)
 getUserMedia.sharingMenuAudioCaptureApplication = %S (vərəq səsi və tətbiq)
+getUserMedia.sharingMenuAudioCaptureScreen = %S (vərəq səsi və ekran)
+getUserMedia.sharingMenuAudioCaptureWindow = %S (vərəq səsi və pəncərə)
+getUserMedia.sharingMenuAudioCaptureBrowser = %S (vərəq səsi və vərəq)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
 getUserMedia.sharingMenuUnknownHost = Naməlum mənşə
