[son] update from Pootle (firefox)

--- a/son/services/sync/errors.properties
+++ b/son/services/sync/errors.properties
@@ -23,5 +23,5 @@ error.reason.unknown          = Firka šibayante
 change.password.pwSameAsPassword     = Šennikufaloo ši tenji nda sohõda šennikufaloo
 change.password.pwSameAsUsername     = Šennikufaloo ši tenji nda war sohõda maaɲoo
 change.password.pwSameAsEmail        = Šennikufaloo ši tenji nda war bataga aderesoo
-change.password.mismatch             = Šennikufal hantumantey ši tenji
-change.password.tooShort             = Šennikufal hantumantaa mma hansa ka duurya
+change.password.mismatch             = Šennikufal hantumantey ši hima
+change.password.tooShort             = Šennikufal hantumantaa ga hansa ka duurya
