--- a/son/browser/chrome/browser/devtools/markers.properties
+++ b/son/browser/chrome/browser/devtools/markers.properties
@@ -70,6 +70,12 @@ marker.value.DOMEventBubblingPhase=Bulbul
 
 # LOCALIZATION NOTE (marker.gcreason.label.*):
 # These strings are used to give a concise but readable description of a GC reason.
+marker.gcreason.label.DESTROY_RUNTIME=Wii
+marker.gcreason.label.DESTROY_CONTEXT=Wii
+marker.gcreason.label.LAST_DITCH=Doo šii lakkaloo ra
+marker.gcreason.label.MEM_PRESSURE=Lakkal yalaafante
+marker.gcreason.label.DOM_IPC=IPC
+marker.gcreason.label.DOM_WORKER=GC waati goykaw
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
