--- a/uz/browser/chrome/browser/devtools/markers.properties
+++ b/uz/browser/chrome/browser/devtools/markers.properties
@@ -26,6 +26,7 @@ marker.label.unknown=Noma’lum
 # LOCALIZATION NOTE (marker.label.javascript.*):
 # These strings are displayed as JavaScript markers that have special
 # reasons that can be translated.
+marker.label.javascript.workerRunnable=Worker
 
 # LOCALIZATION NOTE (marker.fieldFormat):
 # Some timeline markers come with details, like a size, a name, a js function.
@@ -66,6 +67,8 @@ marker.value.DOMEventBubblingPhase=Pufaklash
 
 # LOCALIZATION NOTE (marker.gcreason.label.*):
 # These strings are used to give a concise but readable description of a GC reason.
+marker.gcreason.label.OUT_OF_NURSERY=Enaga – to‘la
+marker.gcreason.label.DOM_IPC=IPC
 
 # LOCALIZATION NOTE (marker.gcreason.description.*):
 # These strings are used to give an expanded description of why a GC occurred.
