--- a/uz/toolkit/chrome/global/aboutReader.properties
+++ b/uz/toolkit/chrome/global/aboutReader.properties
@@ -31,4 +31,6 @@ aboutReader.footer.deleteThisArticle=Bu maqolani o‘chirish
 # These are used for the Reader View toolbar button and the menuitem within the
 # View menu.
 readerView.enter=O‘qish ko‘rinishiga o‘tish
+readerView.enter.accesskey=R
 readerView.close=O‘qish ko‘rinishini yopish
+readerView.close.accesskey=R
