[uz] update from Pootle (firefox)

--- a/uz/browser/chrome/browser/browser.properties
+++ b/uz/browser/chrome/browser/browser.properties
@@ -57,6 +57,7 @@ addonConfirmInstall.message=Ushbu sayt qo‘shimcha dasturni #1:’ga o‘rnatis
 # #2 is the total number of add-ons being installed (at least 2)
 
 addonwatch.slow=%1$S %2$Sni sekin ishlashiga sabab bo‘lishi mumkin
+addonwatch.disable.label=%S qo‘sh. dasturini o‘chirib qo‘yish
 addonwatch.ignoreSession.label=Hozircha rad qilish
 addonwatch.ignoreSession.accesskey=r
 addonwatch.ignorePerm.label=Butunlay rad qilish
@@ -617,6 +618,7 @@ getUserMedia.sharingMenu.accesskey = Q
 # %S is the website origin (e.g. www.mozilla.org)
 getUserMedia.sharingMenuCamera = %S (kamera)
 getUserMedia.sharingMenuMicrophone = %S (mikrofon)
+getUserMedia.sharingMenuAudioCapture = %S (ichki oyna audiosi)
 getUserMedia.sharingMenuApplication = %S (ilova dastur)
 getUserMedia.sharingMenuScreen = %S (ekran)
 getUserMedia.sharingMenuWindow = %S (oyna)
@@ -626,6 +628,7 @@ getUserMedia.sharingMenuCameraMicrophoneApplication = %S (kamera, mikrofon va il
 getUserMedia.sharingMenuCameraMicrophoneScreen = %S (kamera, mikrofon va ekran)
 getUserMedia.sharingMenuCameraMicrophoneWindow = %S (kamera, mikrofon va oyna)
 getUserMedia.sharingMenuCameraMicrophoneBrowser = %S (kamera, mikrofon va ichki oyna)
+getUserMedia.sharingMenuCameraAudioCaptureWindow = %S (kamera, ichki oyna audiosi va oyna)
 getUserMedia.sharingMenuCameraApplication = %S (kamera va ilova dastur)
 getUserMedia.sharingMenuCameraScreen = %S (kamera va ekran)
 getUserMedia.sharingMenuCameraWindow = %S (kamera va oyna)
